--- a/reprex_practice.Rmd
+++ b/reprex_practice.Rmd
@@ -80,10 +80,27 @@ mack_creek_vertebrates %>%
   clean_names() %>% 
   filter(species == "ONCL") %>% 
   ggplot(aes(x = length1, y = weight)) +
-         geom_point(aes(shape = 12), color = "purple") +
+         geom_point(shape = 12, color = "purple") +
          theme_minimal() +
          labs(x = "Cutthroat trout length (cm)",
               y = "Weight (g)")
+
 ```
+
+## My second reprex
+
+```{r}
+library(palmerpenguins)
+
+ggplot(data = penguins, aes(x = species, y = body_mass_g)) +
+  geom_point(aes(size = body_mass_g),
+             color = "red")
+
+# when making a ggplot for a data set, within the geom_() selection, the aes() function only includes arguments, such as the size of the points in this case, that have to do with a variable. So as the body mass increases, so does the size of that data point. if what you are specifying, such as color in this case, does not depend on a variable and instead will be constant across the board, then we do not place it in aes() and rather just within the geom_() function.
+
+
+```
+
+
 
 ## End
